*** empty log message ***

--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -12,6 +12,11 @@ Data Crow 3.9.8  [Released on June xx, 2011]  [testing: high]  [target: producti
 - The XML item importer for images imports an empty item for every imported image. 
 - Non property modules could no longer be used as a reference for other modules (reference
   fields).
+- Define Fields dialog did not have a help page linked (pressing F1 shows an empty page).
+- Change password dialog did not have a help page linked (pressing F1 shows an empty page).
+- Loan information overview did not have a help page linked (pressing F1 shows an empty page).
+- In many cases the help does not clearly state where to find the functionality or option. 
+- File Renamer functionality was broken due to performance problems.
 
 [Changed]
 - For persons (such as artists and authors) the name field has been changed to read 
