--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -7,6 +7,7 @@ Data Crow 3.9.9  [Released on June xx, 2011]  [testing: high]  [target: producti
 - Images were not removed from the media images folders after the item has been deleted.
   An upgrade process will remove all images that really should have been deleted 
   on removing the accompanying items.
+- Images not always correctly updated by the online search.
 
 [Changed]
 - Default value for "Company / Organization" for associates is now set by default for
