*** empty log message ***

--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,4 +1,15 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.9.11  [Released on December 30, 2011]  [testing: high]  [target: production]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+
+
+[Changed]
+- Upgraded to the latest version of jAudioTagger (2.0.4)
+
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.9.10  [Released on November 19, 2011]  [testing: high]  [target: production]
 -----------------------------------------------------------------------------------------
 
