--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -25,6 +25,10 @@ Data Crow 3.9.11  [Released on December 30, 2011]  [testing: high]  [target: pro
 - NullPointerException when searching for ASINs (related to CueCat scanner).
 - Various upgrade problems from the 3.9.10 version related to the associate names;
   names empty after upgrade, names not shown in the table view
+- Pictures not shown after removing one of the picture fields
+- Bol.com no longer working
+- Errors for online book searches after changing the category field to a multiple 
+  relationship field.
 
 [Changed]
 - Upgraded to the latest version of jAudioTagger (2.0.4)
