--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,4 +1,12 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.9.12  [Released on December 30, 2011]  [testing: high]  [target: production]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- NullPointer when saving items.
+
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.9.11  [Released on December 30, 2011]  [testing: high]  [target: production]
 -----------------------------------------------------------------------------------------
 
