--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -4,10 +4,11 @@ Data Crow 3.9.12  [Released on March 10, 2012]  [testing: high]  [target: produc
 
 [Fixed]
 - Fixed the check for existing external references to avoid problems when saving.
-- [3467923], [3489871], [3474523], [3477841] NullPointer when saving items.
+- [3467923], [3489871], [3474523], [3477841], [3484681] NullPointer when saving items.
 - [3450698] Multiple author creation (unconfirmed fix).
 - [3471896] IMDB.com; USA search doesn't work goes to default. 
 - [3484660] IMDB-Import for Actors/Directors does not import pictures.
+- [3484670] Undo current filter still does not work
 
 
 -----------------------------------------------------------------------------------------
